--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ main {
   width: 100%;
   height: calc(100vh - 6rem);
   padding: 5rem;
-  background: url(/img/spiderman.jpg) no-repeat;
+  background: url(/img/spiderman.webp) no-repeat;
   background-size: 100%;
   animation: zoom 20s ease infinite;
 }
